light and dark theme

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <main class="Main">
         <header class="Header" id="header"></header>
         <section id="content">
-            <div class="loading"></div>
+            <div class="Main-loading"></div>
         </section>
     </main>
 </body>
